--- a/index.html
+++ b/index.html
@@ -1,5 +1,4 @@
-<script src="https://cdn.tailwindcss.com">
-</script>
+<script src="https://cdn.tailwindcss.com"></script>
 
 <div class="flex items-center justify-center h-screen bg-blue-100">
     <div class="bg-white p-8 rounded shadow-lg">
@@ -7,14 +6,14 @@
         <img src="https://pentesternepal.com/images/logo-11th.png" alt="Pentester Nepal" class="mx-auto h-20">
         <hr class="my-3">
         <h1 class="text-2xl font-bold text-gray-800 mb-3">
-            Thank you for participating!
+            PTN CTF 2025 — Coming Soon!
         </h1>
         <p class="text-gray-600">
-            We have now concluded the CTF. We hope you had fun and learned something new.
+            We're preparing an exciting new CTF experience for you.
         </p>
 
         <p class="text-gray-800 mt-3">
-            We will be announcing the new CTF soon. Stay tuned!
+            Stay tuned for updates and follow us for announcements. Get ready to hack!
         </p>
     </div>
 </div>
